src/shared/components/accordion/accordion.css
/**
 * Block
 */

.hw-accordion {
  display: block;
  padding: 0;
  margin: 0 0 var(--hw-spacing) 0;
  list-style: none;
  background-color: white;
  border: 3px solid var(--hw-color-gray-lighter);
  transition: border-color 0.3s ease, max-height 0.3s ease, transform 0.3s ease;

  &:hover {
    border-color: var(--hw-color-gray-darker);
  }

  /**
   * Elements
   */

  &__item {
    transition: height 0.5s ease;
    overflow: hidden;

    &:last-child {
      margin-bottom: var(--hw-spacing-large);
    }

    &:first-child .hw-accordion__trigger {
      border: 0;
    }
  }

  &__trigger {
    position: relative;
    display: block;
    width: calc(100% - var(--hw-spacing-small) * 2);
    margin: 0 var(--hw-spacing-small) 0 var(--hw-spacing-small);
    padding: var(--hw-spacing-smaller) 0;
    padding-right: var(--hw-spacing-small);
    border: 0;
    border-top: 3px solid var(--hw-color-gray-lighter);
    font-family: var(--hw-font-primary-medium);
    font-size: var(--hw-font-size-small);
    text-align: left;

    &:hover,
    &:focus {
      color: var(--hw-color-primary-dark);
      outline: 0;
    }
  }

  &__arrow {
    &::before,
    &::after {
      position: absolute;
      top: 22px;
      right: 0;
      display: block;
      width: 12px;
      height: 4px;
      content: '';
      background-color: currentColor;
      transform: rotate(-45deg);
      transition: transform 0.1s ease;
    }

    &::after {
      right: 6px;
      transform: rotate(45deg);
    }
  }

  &__contents {
    padding: var(--hw-spacing-small);
  }

  /**
   * Modifiers
   */

  &__item--expanded .hw-accordion__trigger {
    color: var(--hw-color-primary-dark);
    font-family: var(--hw-font-primary-bold);
  }

  &__item--expanded .hw-accordion__arrow::before {
    transform: rotate(45deg);
  }

  &__item--expanded .hw-accordion__arrow::after {
    transform: rotate(-45deg);
  }

  &--dark {
    background: var(--hw-color-gray);
    border: 0;

    /* Dark version has top/bottom borders */
    & .hw-accordion__item {
      &:last-child {
        margin-bottom: 0;
      }

      &:first-child .hw-accordion__trigger {
        border-top: 1px solid rgba(242, 242, 242, 0.1);
      }

      &:last-child .hw-accordion__trigger {
        border-bottom: 1px solid rgba(242, 242, 242, 0.1);
      }
    }

    & .hw-accordion__trigger {
      color: var(--hw-color-white);
      font-size: var(--hw-font-size-h3);
      border-width: 1px;
      border-color: rgba(242, 242, 242, 0.1);
    }

    & .hw-accordion__item:hover {
      background: var(--hw-color-gray-dark);
      color: var(--hw-color-white);
    }

    & .hw-accordion__contents {
      background: var(--hw-color-gray);
    }
  }
}

/**
  * no-js fallbacks
  */

.no-js .hw-accordion__contents {
  display: block;
}

